--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "moment": "^2.29.4",
     "node-steam-openid": "^1.1.0",
+    "semver": "^7.5.4",
     "socket.io": "^4.7.1",
     "sqlite": "^4.2.1",
     "sqlite3": "^5.1.6",
